# windowresizer

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: doxygen_docs.cmake  graphviz_graph.cmake  vcpkg_setup.cmake
data/: devsec.qss  resources.qrc  windowresizericon.rc
src/: CMakeLists.txt
src/script/: resize_window.ps1
src/windowresizer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui  processlistmodel.cpp
src/windowresizer/include/windowresizer/: mainwindow.h  processlistmodel.h
src/windowresizerutils/: CMakeLists.txt  processdata.cpp  processutils.cpp  windowresizer.cpp  windowsinterface.cpp
src/windowresizerutils/include/windowresizerutils/: CMakeLists.txt  constants.h  osinterface.h  processdata.h  processutils.h  windowresizer.h  windowsinterface.h
tests/windowresizer/: CMakeLists.txt  main.cpp  processutils_test.cpp
